[gd_scene load_steps=7 format=2]

[ext_resource path="res://gameworld/entities/enemy0.gd" type="Script" id=1]
[ext_resource path="res://gameworld/models/enemy0/amongusguy.glb" type="PackedScene" id=2]
[ext_resource path="res://gameworld/entities/sound1.wav" type="AudioStream" id=3]
[ext_resource path="res://gameworld/entities/sound0.wav" type="AudioStream" id=4]

[sub_resource type="CylinderShape" id=1]
radius = 0.25
height = 1.0

[sub_resource type="CylinderShape" id=4]
radius = 0.5

[node name="Enemy0" type="KinematicBody"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )
sounds = [ ExtResource( 4 ), ExtResource( 3 ) ]

[node name="amongusguy" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 4
collision_mask = 11

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="ScreamTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true
autostart = true

[node name="PlayerParent" type="Position3D" parent="."]

[node name="PlayerVisibility" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -128 )
collision_mask = 3

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="ScreamTimer" to="." method="_on_ScreamTimer_timeout"]
